Ajustado as classes

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -835,6 +835,10 @@ h6 {
   background: #ffecdf;
 }
 
+.custom-size {
+  max-width: 80%;
+}
+
 /* Activity */
 .dashboard .activity {
   font-size: 14px;
